--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ button {
     border-radius: 4px;
     cursor: pointer;
     cursor: hand;
+    margin: .5em;
 }
 button:hover {
     background-color: #cfd8dc;
@@ -52,14 +53,12 @@ div {
 }
 
 .heroes {
-    float: left;
     margin: 0 0 2em 0;
     list-style-type: none;
     padding: 0;
 }
 .heroes li {
     cursor: pointer;
-    position: relative;
     left: 0;
     background-color: #eee;
     margin: .5em;
@@ -116,8 +115,7 @@ div {
 
 label {
     display: inline-block;
-    width: 4em;
-    margin: .5em 0;
+    margin: .5em;
     color: #888;
 }
 label.value {
